[package]
name = "orbital_decay_sdl2"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
gridbugs = { version = "0.10", features = [ "chargrid_sdl2_gamepad" ] }
env_logger = "0.10"
orbital_decay_app = { path = "../app" }
orbital_decay_native = { path = "../native" }
